--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "cmt"
-description = ""
+name = "cmt-cli"
 version.workspace = true
 authors.workspace = true
+description.workspace = true
 repository.workspace = true
 license.workspace = true
 edition.workspace = true
 
 [dependencies]
-cmt-cli = { workspace = true }
+clap = { workspace = true }
