--- a/searcher/Cargo.toml
+++ b/searcher/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "cmt"
-description = ""
+name = "searcher"
 version.workspace = true
 authors.workspace = true
+description.workspace = true
 repository.workspace = true
 license.workspace = true
 edition.workspace = true
 
 [dependencies]
-cmt-cli = { workspace = true }
